k8s/manifests/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
        - name: blog
          image: derekshaw/blogmicro:1.1
          command: ["/app/wait-for.sh", "db-blog:5432", "--", "/app/start.sh"]
          args: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: blog
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: blog
